--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,11 @@
   <meta charset="utf-8">
   <title>ChatbotUi</title>
   <base href="/">
+  
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
